--- a/password_analyzer_final/password_analyzer/static/styles.css
+++ b/password_analyzer_final/password_analyzer/static/styles.css
@@ -51,7 +51,7 @@ li {
 .container {
     text-align: center;
     background-color: #E0E0E0; /* Change the background color to your desired color */
-    border: 3px solid grey; /* Add a border with a 2px width and a gray color */
+    border: 3px solid grey; /* 
     padding-top: 50px; /* Add padding to create space around the content */
     padding-bottom: 300px;
     padding-left: 50px;
